[package]
name = "test_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
dolly = "0.4.0"
futures-lite = "1.12.0"
glam = "0.22.0"
image = "0.24.5"
wgpu = "0.14.2"
winit = "0.27.5"